src/test/ui/error-codes/E0152.stderr
error[E0152]: duplicate lang item found: `panic_impl`.
  --> $DIR/E0152.rs:14:1
   |
LL | struct Foo; //~ ERROR E0152
   | ^^^^^^^^^^^
   |
   = note: first defined in crate `std`.

error: aborting due to previous error

For more information about this error, try `rustc --explain E0152`.
